--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "24.0.3"
     defaultConfig {
         applicationId "pl.hypeapp.wykopolka"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:design:$supportLibraryVersion"
     compile "com.android.support:support-v4:$supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$supportLibraryVersion"
     // REST
     // MVP
     compile "net.grandcentrix.thirtyinch:thirtyinch:$thirtyinchVersion"
@@ -53,8 +54,10 @@ dependencies {
     // UTIL
     compile "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     // IMAGES & ANIMATIONS
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
+    compile 'com.github.traex.rippleeffect:library:1.3'
     // DEPENDENCY INJECTION
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
