--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLibraryVersion"
     compile "com.android.support:palette-v7:$supportLibraryVersion"
     compile 'net.opacapp:multiline-collapsingtoolbar:1.3.0'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     // REST
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
