--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     // IMAGES & ANIMATIONS
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
     compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'hanks.xyz:smallbang-library:0.1.2'
     // DEPENDENCY INJECTION
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
