--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     def butterKnifeVersion = '8.3.0'
     def daggerVersion = '2.6'
     def smarttablayoutLibraryVersion = '1.6.1@aar'
+    def retrofitVersion = '2.1.0'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -51,9 +52,9 @@ dependencies {
     compile 'net.opacapp:multiline-collapsingtoolbar:1.3.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     // REST
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:converter-jackson:2.1.0'
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     // MVP
     compile "net.grandcentrix.thirtyinch:thirtyinch:$thirtyinchVersion"
@@ -62,10 +63,11 @@ dependencies {
     compile "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
+    compile "org.apache.commons:commons-lang3:3.5"
     // IMAGES & ANIMATIONS
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
-    compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'hanks.xyz:smallbang-library:0.1.2'
+    compile 'com.balysv:material-ripple:1.0.2'
     // DEPENDENCY INJECTION
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
