--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "pl.hypeapp.wykopolka"
         minSdkVersion 17
@@ -61,6 +61,7 @@ dependencies {
     compile "net.grandcentrix.thirtyinch:thirtyinch-plugin:$thirtyinchVersion"
     // UTIL
     compile "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
+    compile "com.pascalwelsch.compositeandroid:fragment:$supportLibraryVersion" //CHYBA USUNAC
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     compile "org.apache.commons:commons-lang3:3.5"
