--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     compile "org.apache.commons:commons-lang3:3.5"
+    compile 'com.github.xiprox.errorview:library:2.+'
+    compile 'com.jpardogo.googleprogressbar:library:1.2.0'
     // IMAGES & ANIMATIONS
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
     compile 'hanks.xyz:smallbang-library:0.1.2'
