--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,6 @@ dependencies {
     compile "com.ogaclejapan.smarttablayout:library:$smarttablayoutLibraryVersion"
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     compile "org.apache.commons:commons-lang3:3.5"
-    compile 'com.github.xiprox.errorview:library:2.+'
     compile 'com.jpardogo.googleprogressbar:library:1.2.0'
     // IMAGES & ANIMATIONS
     compile "com.github.bumptech.glide:glide:$bumptechGlideVersion"
@@ -79,6 +78,7 @@ dependencies {
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.merhold.extensiblepageindicator:extensiblepageindicator:1.0.1'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     // DEPENDENCY INJECTION
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
