--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,7 @@
         </activity>
         <activity
             android:name="pl.hypeapp.wykopolka.ui.activity.AddBookActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_add_book">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
