--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
 - chmod +x gradlew
 env:
   global:
-   - ANDROID_API_LEVEL=24
+   - ANDROID_API_LEVEL=25
    - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=24.0.1
+   - ANDROID_BUILD_TOOLS_VERSION=25.0.0
    - ANDROID_ABI=google_apis/armeabi-v7a
    - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default)
 android:
@@ -41,7 +41,7 @@ android:
 #    - sys-img-armeabi-v7a-android-19
 
   licenses:
-    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 before_script:
