--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 jdk:
-  - oraclejdk8
+  - oraclejdk7
 sudo: true
 before_install:
 - chmod +x gradlew
@@ -49,5 +49,5 @@ before_script:
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
-
+script: ./gradlew assembleMyappDebug connectedMyappDebugAndroidTest -PdisablePreDex
 
