Changed start activity to WelcomeActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="pl.hypeapp.wykopolka.ui.activity.SignInActivity"
-            android:label="@string/title_activity_sign_in">
+            android:name="pl.hypeapp.wykopolka.ui.activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -26,8 +25,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="pl.hypeapp.wykopolka.ui.activity.WelcomeActivity"
-            android:label="@string/title_activity_welcome">
+            android:name="pl.hypeapp.wykopolka.ui.activity.SignInActivity"
+            android:label="@string/title_activity_sign_in">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
