Added lint abort false

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
